--- a/style.css
+++ b/style.css
@@ -1,13 +1,41 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
-h1{
+
+h1 {
     font-size: 50px;
 }
-.name-color{
+
+.name-color {
     font-size: 72px;
     color: orange;
 }
-img{
-    
+
+section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 5%;
+}
+
+.half-width img {
+    margin-top: 15px;
+    width: 80%;
+}
+
+.link-bottom {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+    background-image: linear-gradient(#FF416C, #FF4B2B);
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+
+.top-banner {
+    background-image: url(image/top-banner.png);
+    background-repeat: no-repeat;
 }
