--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -38,4 +39,16 @@ section {
 .top-banner {
     background-image: url(image/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.text {
+    text-align: justify;
+    padding-right: 100px;
+}
+
+.dream-big {
+    background-image: url(image/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
 }
